<resources>
    <string name="app_name">ICP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="section_format">Hello World from section: %1$d</string>


    <string name="application_name">FingerprintDialog</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>

    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="title_activity_newactivity">newactivity</string>

    <string name="fingerprint_not_recognized">Not Authenticated</string>
    <string name="fingerprint_success">Authenticated sucessfully</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="action_setings">Settings</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main_scrolling">MainScrolling</string>
    <string name="firbase_intialisation">1</string>
    <string name="title_activity_fingerprint_authentication_dialog_fragment">
        FingerprintAuthenticationDialogFragment
    </string>
    <string name="sign_finger">SIGN-IN USING Fingerprint</string>
    <!-- Added by Divya-->
    <string name="itemdesc">Description of the work</string>
    <string name="threshold">Threshold allowed</string>
    <string name="DeadLine">Deadline</string>
    <string name="Assign">Assign The Task </string>
    <string name="DataCollector">DataCollector</string>
    <string name="supervisor">Supervisor</string>

    <string name="Save">Save</string>
    <string name="Price">Price</string>
    <string name="Address">Address</string>

    <string-array name="phase">
        <item name="phase1">Phase 1</item>
        <item name="phase2">Phase 2</item>
        <item name="education">Education</item>
    </string-array>

    <string-array name="qtymou">
        <item name="KG">KG</item>
        <item name="Dozen">Dozen (12 Nos)</item>
        <item name="Lb">Pound</item>
        <item name="Litre">Litre</item>
        <item name="Ounce">Ounces</item>
    </string-array>
</resources>
