<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verifier_price"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.sih2018.VerifierPriceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:text="Qty/UOM"
            android:textSize="18dp"
            android:textStyle="bold"
            android:paddingLeft="12dp"
            android:paddingBottom="4dp" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_qty"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:text="Price"
            android:textSize="18dp"
            android:textStyle="bold"
            android:paddingLeft="12dp"
            android:paddingBottom="4dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:id="@+id/price_entry"
            android:inputType="numberDecimal"
            android:hint="@string/Price"
            android:textSize="18dp"
            android:paddingLeft="12dp"
            android:paddingBottom="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:text="Shop"
            android:textSize="18dp"
            android:textStyle="bold"
            android:paddingLeft="12dp"
            android:paddingBottom="4dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:id="@+id/add_entry"
            android:inputType="textPostalAddress"
            android:hint="@string/Address"
            android:textSize="18dp"
            android:paddingLeft="12dp"
            android:paddingBottom="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:paddingBottom="4dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_value"
            android:textColor="#ffff"
            android:background="@color/colorPrimary"
            android:textSize="15dp"
            android:text="@string/Save"
            />

        <fragment
            android:id="@+id/map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            class="com.google.android.gms.maps.SupportMapFragment" />
    </LinearLayout>


</LinearLayout>
